// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea renders correctly 1`] = `
<div
  class="root"
>
  <div
    class="inputWrapper"
  >
    <textarea
      class="textarea"
    />
  </div>
</div>
`;

exports[`TextArea renders with 5 rows 1`] = `
<div
  class="root"
>
  <div
    class="inputWrapper"
  >
    <textarea
      class="textarea"
      rows="5"
    />
  </div>
</div>
`;

exports[`TextArea renders with a value 1`] = `
<div
  class="root"
>
  <div
    class="inputWrapper"
  >
    <textarea
      class="textarea"
    >
      this one has a value
    </textarea>
  </div>
</div>
`;

exports[`TextArea renders with an error 1`] = `
<div
  class="root errored"
>
  <div
    class="error"
  >
    Please enter valid input
  </div>
  <div
    class="inputWrapper"
  >
    <textarea
      class="textarea errored"
    />
  </div>
</div>
`;

exports[`TextArea renders with placeholder 1`] = `
<div
  class="root"
>
  <div
    class="inputWrapper"
  >
    <textarea
      class="textarea"
      placeholder="0.0000"
    />
  </div>
</div>
`;
